fix(bug): refactor and bug fix in some part of project
